<resources>
    <string name="app_name">Documents Manager</string>
    <string name="nome_id">Insira seu nome</string>
    <string name="Senha_id">Insira sua senha</string>
    <string name="nome_ED">Insira seu nome</string>
    <string name="email_ED">Insira seu email</string>
    <string name="senha_ED">Crie uma senha</string>
    <string name="senha_ED2">Confirme a senha</string>
    //AdICIONAR PESSOA addP
    <string name="nomepessoal_ed">Insira Primeiro nome</string>
    <string name="apelido_ed">Insira seu apelido</string>
    <string name="idade_ed">Idade</string>
    <string name="peso_ed">Peso</string>
    <string name="telefone_ed">Insira seu numero de Celular</string>
    <string name="total">Total: </string>
    <string name="spinner"></string>
    <string name="total_ed"></string>
    <string name="desconto_ed"></string>
    <string name="validade_ed"></string>
    <string name="validade_tv"></string>
    <string name="scrool"></string>
    <string name="data_ed">Data de entrada ex:D/M/A</string>
    <string name="title_activity_navegation">Navegation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    //Cadastro
    <string name="nome_cad">Insira seu nome</string>
    <string name="email_cad"> Insira seu emial</string>
    <string name="senha_cad">Insira sua senha</string>
    <string name="senha_cad2">Reentroduza a senha</string>
    <string name="tel_cad">Insira seu numero</string>
    <string name="senha_cad02">Insira sua senha</string>


    //ToolBar

    <string name="navegation_draw_open">Open navegation drawer</string>
    <string name="navegation_draw_close">Close navegation drawer</string>
    <string name="title_activity_drawer0002">Drawer0002</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tela_de_login">Tela de login</string>
    <string name="home">Home</string>
    <string name="adicionar_cliente">Adicionar Cliente</string>
    <string name="preco">Preco</string>
    <string name="log_out">Log out</string>
    <string name="sair">Sair</string>
    <string name="comunication">Comunication</string>
    <string name="adicionar">Adicionar</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="endere_o">Endereço</string>
    <string name="quantidade_de_dias">Quantidade de dias :</string>
    <string name="masculino">Masculino</string>

    <!-- ImagePicker string resource start -->
    <string name="image_picker_provider_authority_suffix" translatable="false">.imagepicker.provider</string>

    <string name="title_choose_image_provider">Choose</string>
    <string name="action_cancel">Cancel</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_camera">Camera</string>

    <string name="permission_gallery_denied">
        <![CDATA[Storage permission is needed to pick gallery image. Please allow storage permission from Settings > Permissions.]]></string>
    <string name="permission_camera_extended_denied">
        <![CDATA[Camera and Storage permissions are needed to take a picture. Please allow both the requested permissions from Settings > Permissions.]]></string>
    <string name="permission_camera_denied">
        <![CDATA[Storage permission is needed to take a picture. Please allow storage permission from Settings > Permissions.]]></string>

    <string name="error_failed_to_create_camera_image_file">Failed to create Camera image file</string>
    <string name="error_failed_pick_gallery_image">Failed to pick Gallery image</string>
    <string name="error_failed_to_crop_image">Failed to crop image</string>
    <string name="error_failed_to_compress_image">Failed to compress image</string>
    <string name="error_task_cancelled">Task Cancelled</string>
    <string name="error_camera_app_not_found">Camera app not found</string>
    <!-- ImagePicker string resource end -->

    <!-- uCrop string resource start -->
    <string name="ucrop_label_original">Original</string>
    <string name="ucrop_label_edit_photo">Edit Photo</string>
    <string name="ucrop_menu_crop">Crop</string>
    <string name="ucrop_rotate">Rotate</string>
    <string name="ucrop_scale">Scale</string>
    <string name="ucrop_crop">Crop</string>
    <!-- uCrop string resource end -->
</resources>

